# SpatialBoost

./: .gitignore  CMakeLists.txt  Make_Solution-vs2019.bat  Make_Solution-vs2022.bat  Make_Solution.bat  README.txt  RenderingEngine.sln  premake5.lua
Assets/Shaders/: blinn_shading.frag  blinn_shading.vert  common.glsl  deferred.frag  deferred.vert  light.frag  light.vert  normal.frag  normal.vert  phong_light.vert  phong_shading.frag  phong_shading.vert  skybox.vert
Libs/assimp/rel/: assimp-vc143-mt.lib
Libs/glad/: CMakeLists.txt  GLAD.vcxproj  glad.c  glad.h
Libs/glfw/: GLFW.vcxproj  premake5.lua
Libs/imgui/: CMakeLists.txt  ImGui.vcxproj
Models/: Section4.txt  Section5.txt  Section6.txt
RenderingEngine/: RenderingEngine.vcxproj  RenderingEngine.vcxproj.filters  imgui.ini  main.cpp
RenderingEngine/Assets/Shaders/: blinn_shading.frag  common.glsl  deferred.frag  deferred_phong.frag  light.frag  light.vert  normal.frag  normal.vert  phong_light.vert  phong_shading.frag  phong_shading.vert  skybox.frag
RenderingEngine/Core/: Application.cpp  Application.h  AssetManager.cpp  AssetManager.h  EntryPoint.h  Time.cpp  Time.h  UUID.cpp  UUID.h
RenderingEngine/Core/BoundingVolume/: AABB.h  Sphere.h  Tree.h
RenderingEngine/Core/Component/: BoundingVolumeComponent.cpp  BoundingVolumeComponent.h  CameraComponent.cpp  CameraComponent.h  DemoComponent.h  LightComponent.h  MaterialComponent.cpp  MaterialComponent.h  MeshComponent.h  Meshcomponent.cpp  RendererComponent.cpp  RendererComponent.h  TransformComponent.cpp  TransformComponent.h
RenderingEngine/Scene/: Scenario3.cpp  Scenario_1.cpp  Scenario_1.h  Scenario_2.cpp  Scenario_2.h  Scenario_3.cpp  Scenario_3.h
Settings/: imgui.ini
(+88 files in other folders)
